# laos-ownership-node

./: .gitignore  Cargo.toml  README.md  local.Dockerfile
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: build-publish-image-fast.yml  build.yml  lint.yml  release.yml  release_runtime.yml  test.yml
bridge/: README.md
bridge/bin-substrate/: Cargo.toml
bridge/bin-substrate/src/bridges/: mod.rs
bridge/bin-substrate/src/bridges/ownership_parachain_evochain/: evochain_headers_to_ownership_parachain.rs  mod.rs
bridge/bin-substrate/src/chains/: evochain.rs  mod.rs  ownership_parachain.rs
bridge/bin-substrate/src/cli/: init_bridge.rs  register_parachain.rs  relay_headers.rs
bridge/bin-substrate/src/cli/relay_headers_and_messages/: mod.rs
bridge/client-evochain/: Cargo.toml
bridge/client-evochain/src/: lib.rs
bridge/client-ownership-parachain/: Cargo.toml
bridge/client-ownership-parachain/src/: codegen_runtime.rs  lib.rs
bridge/laos-relay/: Cargo.toml
bridge/laos-relay/src/bridges/ownership_parachain_evochain/: millau_headers_to_ownership_parachain.rs
bridge/laos-relay/src/chains/: evochain.rs  millau.rs  mod.rs  ownership_parachain.rs
bridge/laos-relay/src/cli/: init_bridge.rs  mod.rs  relay_headers.rs  resubmit_transactions.rs
bridge/light-bridge/src/bridges/ownership_parachain_evochain/: mod.rs
bridge/light-bridge/src/cli/: bridge.rs  init_bridge.rs  relay_headers.rs
deployment/: helmfile.yaml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  eth.rs  main.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/living-assets-ownership/: Cargo.toml
pallets/living-assets-ownership/src/: functions.rs  lib.rs  migrations.rs  mock.rs  tests.rs  traits.rs
pallets/living-assets-ownership/src/migrations/: mod.rs  v1.rs
pallets/livingassets-ownership/: Cargo.toml
pallets/livingassets-ownership/src/: functions.rs  lib.rs  tests.rs
pallets/precompile/sha3fips/: Cargo.toml
precompile/erc721/: Cargo.toml
precompile/erc721/contracts/: IERC721.sol
precompile/erc721/src/: lib.rs  tests.rs
precompile/living-assets/: Cargo.toml
precompile/living-assets/contracts/: LivingAssetsOwnership.sol
precompile/living-assets/src/: lib.rs  tests.rs
precompile/living-assets/testdata/: hello_world.json
precompile/precompileset/: Cargo.toml
precompile/precompileset/src/: lib.rs
precompile/utils/: Cargo.toml
precompile/utils/src/: lib.rs  testing.rs
precompiles/living-assets/: Cargo.toml  living-assets.sol
precompiles/living-assets/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: derive_codec.rs  generate_function_selector.rs  lib.rs
precompiles/utils/macro/src/precompile/: mod.rs
precompiles/utils/src/: data.rs  lib.rs  precompile_set.rs  testing.rs
precompiles/utils/src/evm/: handle.rs
precompiles/utils/src/solidity/codec/: mod.rs  xcm.rs
precompiles/utils/src/testing/: execution.rs  handle.rs
primitive/: Cargo.toml
primitive/src/: lib.rs
primitives/: Cargo.toml
primitives/ethereum-account/: Cargo.toml
primitives/ethereum-account/src/: lib.rs
primitives/ethereumaccount/: Cargo.toml
primitives/ethereumaccount/src/: lib.rs
rpcevm/: 2_evm_rpc_endpoints.go  2_evm_rpc_server.go  3_substrate_client.go  3_substrate_client_test.go  README.md  go.mod  go.sum  main.go  ownership_chain_client.go
rpcevm/web3Client/: client.js  package-lock.json  package.json
runtime/: Cargo.toml
runtime/src/: evochain_messages.rs  lib.rs  precompiles.rs  tests.rs  xcm_config.rs
runtime/src/precompiles/: mock.rs  mod.rs  test.rs
specs/: arrakis-frontier.json
zombienet/: README.md  k8s.toml  native.toml
