[profile.release]
panic = "unwind"

[workspace]
members = [
	"node",
	"runtime",
	"pallets/*",
	"precompiles/*",
]

[workspace.package]
authors = ["Freeverse"]

[workspace.dependencies]

# Substrate utils
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0", default-features = false, features = [
	"derive",
] }

# EVM & Ethereum
# (wasm)
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
evm-gasometer = { version = "0.39.0", default-features = false }
evm-runtime = { version = "0.39.0", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }

# Frontier Precompiles
pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
pallet-evm-living-assets-ownership = { path = "./precompiles/living-assets", default-features = false }

# Polkadot/xcm
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43" }

# Substrate
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

# Precompile utils
# precompile-utils-macro = { path = "./precompiles/utils/macro", default-features = false }
# precompile-utils = { path = "./precompiles/utils", default-features = false }

# Other (wasm)
affix = "0.1.2"
async-trait = { version = "0.1.42" }
derive_more = "0.99"
environmental = { version = "1.1.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.4" }
impl-trait-for-tuples = "0.2.1"
log = { version = "0.4", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
serde = { version = "1.0.101", default-features = false }
sha3 = { version = "0.10", default-features = false }
similar-asserts = "1.1.0"
assert_matches = "1.3.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }
