[package]
name = "pallet-evm-precompileset"
version = "0.1.0"
edition = "2021"

[dependencies]
pallet-evm = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-living-assets-ownership = { workspace = true }
pallet-evm-erc721 = { workspace = true }
pallet-living-assets-ownership = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
polkadot-primitives = { workspace = true }

[features]
default = [
	"std",
]
std = [
    "pallet-evm/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-living-assets-ownership/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "polkadot-primitives/std"
]