[package]
name = "pallet-evm-living-assets-ownership"
authors = ["Freeverse"]
description = "A Precompile to make pallet-living-assets-ownership compatible with pallet-evm"
edition = "2021"
version = "0.1.0"

[dependencies]

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

# precompiles
precompile-utils = { workspace = true, default-features = false }

# LAOS
pallet-living-assets-ownership = { path = "../../pallets/living-assets-ownership", default-features = false }

num_enum = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }

# Substrate
pallet-balances = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
scale-info = { workspace = true, features = [ "derive" ] }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }

precompile-utils = { workspace = true, features = [ "std", "testing" ] }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-std/std",
    "pallet-living-assets-ownership/std",
	"num_enum/std",
	"precompile-utils/std",
]